修改文件: 总结/工作总结.md

--- a/总结/工作总结.md
+++ b/总结/工作总结.md
@@ -2,93 +2,88 @@
 ## 工作内容总结
 ### salon系统
 
-	难点：
-	1. 老代码维护成本高，代码风格五花八门;
-	2.  跨部门合作：km，POPO;
-	3.  作业功能比较单一;
-	4.  直播卡顿/效果不好;
-	5.  沟通能力.<br><br>
+难点：
+>1. 老代码维护成本高，代码风格五花八门;
+>2.  跨部门合作：km，POPO;
+>3.  作业功能比较单一;
+>4.  直播卡顿/效果不好;
+>5.  沟通能力.<br><br>
 
-	结果：
-	1. 重构了整个系统，解决了稳定性、扩展性、维护性低的问题；
-	2. 丰富产品功能：签到支持 4G 扫码、支持 4G 扫码报名；
-	3. 修改了直播的方式，学员可以清楚看到讲师的授课内容；
-	4. 修改作业模块，支持多种类型作业；
-	5. 新增buddy计划，POPO 日历支持 salon 课程时间；
-	6. 功能齐全，快速迭代，受到用户的一致好评
+结果：
+>1. 重构了整个系统，解决了稳定性、扩展性、维护性低的问题；
+>2. 丰富产品功能：签到支持 4G 扫码、支持 4G 扫码报名；
+>3. 修改了直播的方式，学员可以清楚看到讲师的授课内容；
+>4. 修改作业模块，支持多种类型作业；
+>5. 新增buddy计划，POPO 日历支持 salon 课程时间；
+>6. 功能齐全，快速迭代，受到用户的一致好评
 
----
+
 ### cpp系统
 
-	难点：
-	1. 代码维护成本高，代码风格五花八门；
-	2.  逻辑中有太多的判断，sql 语句复杂<br><br>
+难点：
+> 1. 代码维护成本高，代码风格五花八门；
+> 2.  逻辑中有太多的判断，sql 语句复杂
 
 
-	结果：
-	1. 完成新的评审流程的开发。
-	2. 对代码中的一些技术债进行优化，冗余代码提取，sql 语句优化；
-	3. 对晋升职位的雷达图进行更新；
-	4. 新增了进度查询中部门维度的汇总；
-	5. 新增评审各节点的邮件通知；
-	6. 增加了对审批节点数据权限的校验；
-	7. 修复了系统能查看别人晋升相关资料的漏洞。
+结果：
+> 1. 完成新的评审流程的开发。
+> 2. 对代码中的一些技术债进行优化，冗余代码提取，sql 语句优化；
+> 3. 对晋升职位的雷达图进行更新；
+> 4. 新增了进度查询中部门维度的汇总；
+> 5. 新增评审各节点的邮件通知；
+> 6. 增加了对审批节点数据权限的校验；
+> 7. 修复了系统能查看别人晋升相关资料的漏洞。
 
----
+
 ### mbo系统
 
-	难点：
-	1. 业务逻辑过于复杂;
-	2.  代码冗余太多，部分缺少注释<br><br>
+难点：
+> 1. 业务逻辑过于复杂;
+> 2.  代码冗余太多，部分缺少注释
 
 
-	结果：
-		1. 绩效评审中增加年度价值观的考核；
-		2. 新增几条特殊考核流程；
-		3. 完成对考拉四级架构的支持；
-		4. 运维区的开发。
-
-
-
+结果：
+>1. 绩效评审中增加年度价值观的考核；
+>2. 新增几条特殊考核流程；
+>3. 完成对考拉四级架构的支持；
+>4. 运维区的开发。
 
 ## 成长 
 
 ### 	技术：
 
  #### 成长
-	1. 对系统开发过程中所用到的工具已经较为熟练了，能独立的处理业务需求，遇到的开发难点，解决线上问题等 ；
-	2.  能深入的分析源码，熟练使用debug工具，对框架进行一些定制化的改造 ；
-	3.  能对代码进行性能分析，调优，进行工程重构；
-	4.  对Java语言的理解更加深入 。
+>1. 对系统开发过程中所用到的工具已经较为熟练了，能独立的处理业务需求，遇到的开发难点，解决线上问题等 ；
+>2.  能深入的分析源码，熟练使用debug工具，对框架进行一些定制化的改造 ；
+>3.  能对代码进行性能分析，调优，进行工程重构；
+>4.  对Java语言的理解更加深入 。
 #### 改进： 
-	1. 对Spring框架的研究，尤其是多线程，并发情景下的研究不足，框架的使用还比较肤浅，不够深入具体
-	2.  对于工具的使用，需要在知道如何使用的同时，也研究清楚原理，（消息队列，缓存，Dubbo） 
+>1. 对Spring框架的研究，尤其是多线程，并发情景下的研究不足，框架的使用还比较肤浅，不够深入具体
+>2.  对于工具的使用，需要在知道如何使用的同时，也研究清楚原理，（消息队列，缓存，Dubbo） 
 ###  业务 
 
-1. 已经有较为完善的个人想法，对业务的理解，就看后续如何发展 ；
-2. 不是一味的只知道需求，只做需求，而是有想法，有思想的个人，能为产品分忧解难；
-3. 站在技术的角度，对业务未来的发展，有一定的前瞻性。
-
-
+>1. 已经有较为完善的个人想法，对业务的理解，就看后续如何发展 ；
+>2. 不是一味的只知道需求，只做需求，而是有想法，有思想的个人，能为产品分忧解难；
+>3. 站在技术的角度，对业务未来的发展，有一定的前瞻性。
 
 ## 优势与不足
 ### 优势
-1. 负责系统的开发及运维，对于相关的工作，都能够比较好地完成和解决；
-2. 有责任心，对于线上的问题和用户的需求，都能够及时的反馈，并想办法予以解决；
-3. 工作热情，对于一些沟通和协作都会积极推进；
-4. 对技术提升保持激情，会时常通过一些公众号和博客了解新技术，努力提升自身知识 储备；
-5. 与同事之间沟通和合作良好，能够比较好地完成协同任务；
-6. 熟悉多个项目，对发展线的业务有自己的理解。
+>1. 负责系统的开发及运维，对于相关的工作，都能够比较好地完成和解决；
+>2. 有责任心，对于线上的问题和用户的需求，都能够及时的反馈，并想办法予以解决；
+>3. 工作热情，对于一些沟通和协作都会积极推进；
+>4. 对技术提升保持激情，会时常通过一些公众号和博客了解新技术，努力提升自身知识 储备；
+>5. 与同事之间沟通和合作良好，能够比较好地完成协同任务；
+>6. 熟悉多个项目，对发展线的业务有自己的理解。
 ### 不足
-1. 业务的理解深度需要加强；
-2.  对于数据库的一些底层实现细节不不够了了解，还需要进一步学习；
-3.  对于一些大数据系统的底层细节和相关性能调优还需要进一步了解，增强自己的广度和深度。
+>1. 业务的理解深度需要加强；
+>2.  对于数据库的一些底层实现细节不不够了了解，还需要进一步学习；
+>3.  对于一些大数据系统的底层细节和相关性能调优还需要进一步了解，增强自己的广度和深度。
 
 
 
 ## 个人发展计划:
-1.  对于现有系统，在保持线上稳定的基础之上，进行更深入的开发工作；
-2. 加强自己的学习归纳能力，并及时形成相应的学习成果，进行分享；
-5. 对于一些偏基础和底层的的技术实现细节，也要进行相应的学习。
+>1.  对于现有系统，在保持线上稳定的基础之上，进行更深入的开发工作；
+>2. 加强自己的学习归纳能力，并及时形成相应的学习成果，进行分享；
+>5. 对于一些偏基础和底层的的技术实现细节，也要进行相应的学习。
 
 
