修改文件: 总结/工作总结.md

--- a/总结/工作总结.md
+++ b/总结/工作总结.md
@@ -7,7 +7,7 @@
 >2.  跨部门合作：km，POPO;
 >3.  作业功能比较单一;
 >4.  直播卡顿/效果不好;
->5.  沟通能力.<br><br>
+>5.  沟通能力.
 
 结果：
 >1. 重构了整个系统，解决了稳定性、扩展性、维护性低的问题；
@@ -40,7 +40,6 @@
 难点：
 > 1. 业务逻辑过于复杂;
 > 2.  代码冗余太多，部分缺少注释
-
 
 结果：
 >1. 绩效评审中增加年度价值观的考核；
