修改文件: 总结/2019-7-16未命名文件.md

--- a/总结/2019-7-16未命名文件.md
+++ b/总结/2019-7-16未命名文件.md
@@ -1,3 +1,6 @@
 
 # redis 启动
 docker run --name redis -p 6379:6379 -v /docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf -v /docker/redis/data:/data -d redis redis-server /usr/local/etc/redis/redis.conf
+
+# mySql
+docker run --name mysql1 -p 3306:3306 -v /home/docker/mysql:/var/lib/mysql --restart=always -e MYSQL_ROOT_PASSWORD=Zm19930607 -d mysql
