--- a/总结/2019-7-16未命名文件.md
+++ b/总结/2019-7-16未命名文件.md
@@ -1,6 +1,15 @@
 
+# nginx 启动
+docker run -it -p 80:80 --name nginx -v /home/docker/nginx/www:/www -v /home/docker/nginx/config/nginx.conf:/etc/nginx/nginx.conf --privileged=true -v /home/docker/nginx/logs:/www/logs -d nginx;
+
+
+docker run -it -p 80:80 --name nginx -v /usr/local/hexo/public:/usr/share/nginx/html -v /home/docker/nginx/config/nginx.conf:/etc/nginx/nginx.conf --privileged=true -v /home/docker/nginx/logs:/www/logs -d nginx;
 # redis 启动
-docker run --name redis -p 6379:6379 -v /docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf -v /docker/redis/data:/data -d redis redis-server /usr/local/etc/redis/redis.conf
+docker run -it -d -p 6379:6379 --name redis -v /home/docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf -v /home/docker/redis/data:/data -d redis;
 
 # mySql
 docker run --name mysql1 -p 3306:3306 -v /home/docker/mysql:/var/lib/mysql --restart=always -e MYSQL_ROOT_PASSWORD=Zm19930607 -d mysql
+
+
+
+systemctl restart docker;
