--- a/总结/简历.md
+++ b/总结/简历.md
@@ -1,41 +1,97 @@
+# 联系方式
+
+- 手机：17682847176 
+- Email：stupidzhangsj@gmail.com 
+- QQ/微信号：739156041
+
+---
+
+# 个人信息
+
+ - 张胜军/男/1993 
+ - 本科/黑龙江八一农垦大学
+ - 工作年限：4年
+ - 技术博客：http://solo.stupidzhnag.com 
+
+ - 期望职位：Java高级程序员
+ - 期望薪资：税前月薪18k~25k，特别喜欢的公司可例外
+ - 期望城市：杭州
+
+---
+
+# 工作经历
+（工作经历按逆序排列，最新的在最前边，按公司做一级分组，公司内按二级分组）
+
+## ABC公司 （ 2012年9月 ~ 2014年9月 ）
+
+
+
 # 项目经验
 
-## MBO 员工绩效系统
-项目描述：可以通过该平台完成对员工绩效目标的填写、材料提交，过程审核等功能。
+#### MBO 员工绩效系统
+项目描述：该项目是企业用来管理组织和员工绩效的系统，员工可以通过该平台完成对员工绩效目标的填写、材料提交，管理者可以对员工绩效审核等功能。
+项目使用了 activity 作为工作流引擎。使用了Spring Config 作为配置中心，解决了配置管理和发布的问题。优化了响应较慢的接口和 SQL,将原有接口的响应速度提升 1 倍。
+
 项目职责：
-
-1 组织架构变更，审批工作流的修改；<br>
-2 使用了 Activiti 对流程进行控制；<br>
-3 优化系统，提高响应速度，解决业务上的痛点；改善了用户的体验<br>
-
-项目总结：学习了工作流，对代码进行了调优。
+1. 负责主管审核、权限模块、流程统计模块；<br>
+2. 提供对外的 API 接口服务；<br>
+3. 优化系统，提高响应速度，解决业务上的痛点；改善了用户的体验<br>
 
 
 
-## CPP 员工晋升项目
-项目描述：可以通过该平台完成对员工晋升提名、审核；材料提交，答辩安排，评审结果收集等功能。搭建了apollo完成系统中的配置管理和实时更新；
+
+### CPP 员工晋升项目
+项目描述：该项目是企业用来管理组织和员工晋升的系统，通过该平台完成对员工晋升提名、审核、材料提交、答辩安排、评审结果收集等功能。
+负责该项目期间搭建了 Apollo 解决了系统配置的管理和实时更新发布问题；
+
 项目职责：
-
-1 审核流程的修改；<br>
-2 完成了首页能力雷达视图的设计和进度统计功能；<br>
-3 优化了系统的消息通知，对接了通讯系统的日历功能；<br>
-4 对系统遗留的技术债，包括数据安全和业务查询慢，整理了系统的代码结构；<br>
+1. 首页能力雷达视图的设计和进度统计；<br>
+2. 审核流程模块的业务；<br>
+3. 优化了系统的消息通知，对接了通讯系统的日历功能；<br>
+4. 对系统遗留的技术债，包括数据安全和业务查询慢，整理了系统的代码结构；<br>
 
 项目总结：代码风格不一，冗余严重，配置更改。
 
+**需要思考SpringMVC 接入apollo 遇到的问题**
+
+
 ## 易Learning人才发展培训项目
 项目描述：一个企业的学习分享平台，员工可以通过平台在线学习、分享、培训、考试、调查等活动，包含了视频、直播、作业等功能。
-项目中使用 Nginx 完成系统的前后端分离，使用RateLimiter对部分接口完成访问限制，使用了消息队列完成消息发送异步发送，削峰功能，提高了系统性能（热门课程-院长的课程）
+该项目是前后端分离的，项目中使用 RateLimiter 对部分接口完成访问速率的限制，使用了 RabbitMQ 完成消息发送异步发送，削峰功能，提升系统的性能和稳定性。
+在项目组中推行阿里巴巴编码规范的插件，统一编码规范。
+
 项目职责：
-1 参与系统重构时的方案设计和讨论；<br>
-2 完成了系统课程级别的设计，作业模块、直播模块的设计和编码工作；<br>
-3 参与了系统的消息通知的设计；<br>
-4 对系统的部分业务进行了调优；<br>
-5 搭建了配置中心，解决了系统中配置不规范的问题；
+1. 参与系统重构时的方案设计和讨论；<br>
+2. 完成了系统课程级别的设计，作业模块、直播模块的设计和编码工作；<br>
+3. 参与了系统的消息通知的设计；<br>
+4. 对系统的部分业务进行了调优；<br>
+5. 接入了配置中心，解决了系统中配置不规范的问题；
 
 项目总结：在开发培训系统中使用了 使用消息队列解决了消息发送异步，提高了性能，使用 Nginx 完成系统的前后端分离。配置不规范
 
 
 **这里需要写一点遇到的问题 和怎么解决的。**
 
-## 
+
+
+### 技能
+
+- Java 基础知识：掌握
+- JVM 虚拟机（Java内存区域、垃圾算法、垃圾收集器、JVM内存管理）：掌握
+- 高并发、高可用、高性能系统开发：掌握
+- Spring、SpringMVC、Mybatis：掌握
+- Redis 的事务机制、持久化、主从复制：了解
+- 常见消息队列: 掌握
+- Linux 常用命令：掌握
+- Git 版本控制工具：掌握
+- MySQL 常见优化手段：掌握
+- Dubbo： 掌握
+- Zookeeper: 掌握
+
+
+- Java基础：面向对象/动态代理/数据结构/算法
+- JVM ：内存管理/GC
+- 框架：Spring/SpringMVC/Mybatis/SpringBoot/SpringCloud/Shiro
+- 数据库相关：MySQL/Hibernate/
+- 缓存消息中间件：Redis/RabbitMQ/Kafka
+- 版本管理、文档：Git/Swagger2
